--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
             <br/><a href="./ApocalypseSimulator/index.html" class="btn-get-started scrollto">Navigate to its own devlog page.</a>
           </div>
         </div>
+        <div class="col-md-6 col-lg-6">
+          <div class="feature-block">
+            <!-- <img src="img/svg/vector.svg" alt="img" class="img-fluid"> -->
+            <h4>Games made during my freshman year</h4>
+            <img class="col-md-6 col-lg-6" src="https://imgur.com/cqmsF6e" alt="img"></div>
+            <br/><a href="https://github.com/Apo45ty/C-Games" class="btn-get-started scrollto">View Games</a>
+          </div>
+        </div>
+        
       </div>
     </div>
 
