Added link to freshman year games

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="feature-block">
             <!-- <img src="img/svg/vector.svg" alt="img" class="img-fluid"> -->
             <h4>Games made during my freshman year</h4>
-            <img class="col-md-6 col-lg-6" src="https://imgur.com/cqmsF6e" alt="img"></div>
+            <img class="col-md-6 col-lg-6" src="https://i.imgur.com/cqmsF6e.png" alt="img"></div>
             <br/><a href="https://github.com/Apo45ty/C-Games" class="btn-get-started scrollto">View Games</a>
           </div>
         </div>
