Added react native app

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
           <h2>About Me</h2>
           <p class="Roboto">Hi, my name is Antonio Tapia and
-             I adopted the brand ApolionGames for all the games I make. Below are the most note worthy titles I have developed. 
+             I adopted the brand ApolionGames for all the apps/games I make. 
+             Below are the most note worthy titles I have developed. 
           </p>
         </div>
       </div>
@@ -109,6 +110,15 @@
 
     <div class="container">
       <div class="row">
+        <div class="col-md-6 col-lg-6">
+          <div class="feature-block">
+            <!-- <img src="img/svg/vector.svg" alt="img" class="img-fluid"> -->
+            <h4>Mentors Connect</h4>
+            <p>A UI for an social network where mentors and mentees can connect.</p>
+            <div ><img class="col-md-6 col-lg-6" src="img/screenshot.png" alt="img"></div>
+            <a href="https://github.com/Apo45ty/MentorPage" class="btn-get-started scrollto">View on github</a>
+          </div>
+        </div>
         <div class="col-md-6 col-lg-6">
           <div class="feature-block">
             <!-- <img src="img/svg/vector.svg" alt="img" class="img-fluid"> -->
