--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul class="nav-menu">
           <!-- <li class="menu-active"><a href="#hero">Home</a></li> -->
           <li><a href="#about-us">About</a></li>
-          <li><a href="#features">Games</a></li>
+          <li><a href="#features">Projects</a></li>
           <!-- <li><a href="#screenshots">Screenshots</a></li> -->
           <!-- <li><a href="#team">My Social Media</a></li> -->
           <li><a href="#contact">Contact</a></li>
@@ -102,7 +102,7 @@
 
     <div class="container">
       <div class="section-title text-center">
-        <h2>Games</h2>
+        <h2>Projects</h2>
 
       </div>
     </div>
