removed phone number

--- a/index.html
+++ b/index.html
@@ -358,10 +358,10 @@
               <p>antonio at apolion.games</p>
             </div>
 
-            <div>
+            <!-- <div>
               <i class="fa fa-phone"></i>
-              <p>+1 939 788 1579</p>
-            </div>
+              <p></p>
+            </div> -->
           </div>
 
           <div class="social-links">
