--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <script>
           let onClose = function(){
             let modal = document.getElementById("main_modal");
-            modal.style.display = "none"
+            //Add animation to the closing modal
+            modal.classList.add('modalClose');
+            // modal.style.display = "none"
+
           }
         </script>
         <div id="modal_body" >
@@ -28,13 +31,7 @@
         </div>
       </div>
       <div class="componentsrow">
-        <div style="
-          border-style: solid;
-          border-width: 1px;
-          border-color: black;
-          display: flex;
-          flex: 10 1 auto;
-          flex-direction: column;">
+        <div class="componentContainer">
           <div style="
             display: flex;
             flex: 1 1 auto;
@@ -51,13 +48,7 @@
             </div>
           </div>
         </div>
-        <div style="
-          border-style: solid;
-          border-width: 1px;
-          border-color: black;
-          display: flex;
-          flex: 10 1 auto;
-          flex-direction: column;">
+        <div class="componentContainer">
           <div style="
             display: flex;
             flex: 1 1 auto;
@@ -74,13 +65,7 @@
         </div>
       </div>
       <div class="componentsrow">
-        <div style="
-          border-style: solid;
-          border-width: 1px;
-          border-color: black;
-          display: flex;
-          flex: 10 1 auto;
-          flex-direction: column;">
+        <div class="componentContainer">
           <div style="
             display: flex;
             flex: 1 1 auto;
@@ -95,13 +80,7 @@
             </div>
           </div>
         </div>
-        <div style="
-          border-style: solid;
-          border-width: 1px;
-          border-color: black;
-          display: flex;
-          flex: 10 1 auto;
-          flex-direction: column;">
+        <div class="componentContainer">
           <div style="
             display: flex;
             flex: 1 1 auto;
